# spectroscopic_similarity

./: .flake8  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  pyproject.toml  pytest.ini
docs/Guide/: analytical instruments guide.md
plotscripts/: BZ_v3_plotscript.ipynb  RR-M3-5bb-moni-v3_plotscript.ipynb  arrhenius-plotdata.csv  arrhenius-plotscript.ipynb  azide_v2_plotdata.csv  azide_v2_plotscript.ipynb  concept.ipynb  generic_plotscript.ipynb  loph-3-v7_plotscript.ipynb  perm_v2_plotscript.ipynb  water_baseline.csv
plotscripts/SI_figures/: BH_v7_19F.ipynb  BH_v7_19F_plotdata_jaccard.csv  BH_v7_19F_plotdata_spearman.csv  BH_v7_1H.ipynb  BH_v7_1H_plotdata_jaccard.csv  BH_v7_1H_plotdata_spearman.csv  NGR-2-4.ipynb  NGR-2-5.ipynb  NGR2-4_UV.ipynb  NGR2-4_plotdata_jaccard.csv  NGR2-4_plotdata_spearman.csv  NGR2-5_plotdata_jaccard.csv  NGR2-5_plotdata_spearman.csv  formose-v1.ipynb  formose-v1_plotdata_jaccard.csv  formose-v1_plotdata_spearman.csv  formose-v2.ipynb  formose-v2_plotdata_jaccard.csv  formose-v2_plotdata_spearman.csv  imine_monitoring_v5.ipynb  imine_monitoring_v5_plotdata_jaccard.csv  imine_monitoring_v5_plotdata_spearman.csv  imine_monitoring_v6.ipynb  imine_monitoring_v6_plotdata_jaccard.csv  imine_monitoring_v6_plotdata_spearman.csv  loph-3-v7.ipynb  loph-3-v7_plotdata_jaccard.csv  loph-3-v7_plotdata_spearman.csv  monitoring_SP4.ipynb  monitoring_SP4_plotdata_jaccard.csv  monitoring_SP4_plotdata_spearman.csv  perm_v2_absorbance_525nm.csv  photo-v4.ipynb  (+7 more)
tests/: test_nmr_processing.py  test_pipeline.py  test_spinsolve_spectrum.py
(+50 files in other folders)
